Добавлено: пагинация, сортировка, фильтрация, дто и маппер, пару конфигов. Изменено: тесты, сущность, сервис, контроллер, репозиторий