@@ -5,12 +5,19 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import vadim.room_service.dto.RoomRequestDTO;
+import vadim.room_service.dto.RoomResponseDTO;
 import vadim.room_service.entity.Room;
 import vadim.room_service.exception.RoomNotFoundException;
+import vadim.room_service.mapper.RoomMapper;
 import vadim.room_service.repository.RoomRepository;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Optional;
 
@@ -23,10 +30,15 @@ class RoomServiceTest {
     @Mock
     private RoomRepository roomRepository;
 
+    @Mock
+    private RoomMapper roomMapper;
+
     @InjectMocks
     private RoomService roomService;
 
     private Room room;
+    private RoomRequestDTO roomRequestDTO;
+    private RoomResponseDTO roomResponseDTO;
 
     @BeforeEach
     void setUp() {
@@ -35,40 +47,35 @@ class RoomServiceTest {
         room.setName("Deluxe Room");
         room.setDescription("A luxury room");
         room.setPrice(BigDecimal.valueOf(150.0));
-        room.setIsAvailable(true);
+        room.setSleepingPlaces(2);
+
+        roomRequestDTO = new RoomRequestDTO("Deluxe Room", 1, "A luxury room", BigDecimal.valueOf(150.0));
+        roomResponseDTO = new RoomResponseDTO(1L, "Deluxe Room", 1, "A luxury room",
+                BigDecimal.valueOf(150.0), LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES), LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES));
     }
 
     @Test
     void testGetAllRooms() {
-        when(roomRepository.findAll()).thenReturn(List.of(room));
+        Page<Room> page = new PageImpl<>(List.of(room));
+        when(roomRepository.findAll(any(Pageable.class))).thenReturn(page);
+        when(roomMapper.roomToRoomResponseDTO(any(Room.class))).thenReturn(roomResponseDTO);
 
-        List<Room> rooms = roomService.getAllRooms();
+        Page<RoomResponseDTO> result = roomService.getAllRooms(Pageable.unpaged());
 
-        assertEquals(1, rooms.size());
-        assertEquals("Deluxe Room", rooms.getFirst().getName());
-        verify(roomRepository, times(1)).findAll();
-    }
-
-    @Test
-    void testGetAllRoomsSorted() {
-        when(roomRepository.findAll(Sort.by("price"))).thenReturn(List.of(room));
-
-        List<Room> rooms = roomService.getAllRoomsSorted("price");
-
-        assertEquals(1, rooms.size());
-        assertEquals(BigDecimal.valueOf(150.0), rooms.getFirst().getPrice());
-        verify(roomRepository, times(1)).findAll(Sort.by("price"));
+        assertEquals(1, result.getTotalElements());
+        assertEquals("Deluxe Room", result.getContent().get(0).getName());
+        verify(roomRepository, times(1)).findAll(any(Pageable.class));
     }
 
     @Test
     void testGetRoomById_Success() {
         when(roomRepository.findById(1L)).thenReturn(Optional.of(room));
+        when(roomMapper.roomToRoomResponseDTO(room)).thenReturn(roomResponseDTO);
 
-        Room foundRoom = roomService.getRoomById(1L);
+        RoomResponseDTO result = roomService.getRoomById(1L);
 
-        assertNotNull(foundRoom);
-        assertEquals(1L, foundRoom.getId());
-        assertEquals("Deluxe Room", foundRoom.getName());
+        assertNotNull(result);
+        assertEquals("Deluxe Room", result.getName());
         verify(roomRepository, times(1)).findById(1L);
     }
 
@@ -81,48 +88,88 @@ class RoomServiceTest {
 
     @Test
     void testCreateRoom_Success() {
-        when(roomRepository.save(room)).thenReturn(room);
+        RoomRequestDTO roomRequestDTO = new RoomRequestDTO("Deluxe Room", 2, "Luxury suite", BigDecimal.valueOf(300.0));
 
-        Room savedRoom = roomService.createRoom(room);
+        Room room = new Room();
+        room.setId(1L);
+        room.setName("Deluxe Room");
+        room.setDescription("Luxury suite");
+        room.setPrice(BigDecimal.valueOf(300.0));
+        room.setSleepingPlaces(2);
+        room.setCreatedAt(LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES));
+        room.setUpdatedAt(LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES));
 
-        assertNotNull(savedRoom);
-        assertEquals("Deluxe Room", savedRoom.getName());
-        verify(roomRepository, times(1)).save(room);
-    }
+        RoomResponseDTO roomResponseDTO = new RoomResponseDTO(1L, "Deluxe Room", 2, "Luxury suite",
+                BigDecimal.valueOf(300.0), room.getCreatedAt(), room.getUpdatedAt());
 
-    @Test
-    void testCreateRoom_InvalidData() {
-        Room invalidRoom = new Room();
+        when(roomMapper.roomRequestDTOToRoom(any(RoomRequestDTO.class))).thenReturn(room);
+        when(roomRepository.save(any(Room.class))).thenReturn(room);
+        when(roomMapper.roomToRoomResponseDTO(any(Room.class))).thenReturn(roomResponseDTO);
 
-        assertThrows(IllegalArgumentException.class, () -> roomService.createRoom(invalidRoom));
-    }
-
-    @Test
-    void testUpdateRoom_Success() {
-        Room updatedRoom = new Room();
-        updatedRoom.setName("Updated Room");
-        updatedRoom.setDescription("Updated description");
-        updatedRoom.setPrice(BigDecimal.valueOf(200.0));
-        updatedRoom.setIsAvailable(false);
-
-        when(roomRepository.findById(1L)).thenReturn(Optional.of(room));
-        when(roomRepository.save(any(Room.class))).thenReturn(updatedRoom);
-
-        Room result = roomService.updateRoom(1L, updatedRoom);
+        RoomResponseDTO result = roomService.createRoom(roomRequestDTO);
 
         assertNotNull(result);
-        assertEquals("Updated Room", result.getName());
-        assertEquals(BigDecimal.valueOf(200.0), result.getPrice());
-        assertFalse(result.getIsAvailable());
+        assertEquals("Deluxe Room", result.getName());
+        assertEquals(2, result.getSleepingPlaces());
+        assertEquals(BigDecimal.valueOf(300.0), result.getPrice());
+        assertNotNull(result.getCreatedAt());
+        assertNotNull(result.getUpdatedAt());
+
         verify(roomRepository, times(1)).save(any(Room.class));
     }
 
     @Test
-    void testUpdateRoom_NotFound() {
+    void testCreateRoom_InvalidData() {
+        assertThrows(IllegalArgumentException.class, () -> roomService.createRoom(new RoomRequestDTO()));
+    }
+
+    @Test
+    void testUpdateRoom_Success() {
+        RoomRequestDTO updatedRoomDTO = new RoomRequestDTO("Updated Room", 3, "Updated description", BigDecimal.valueOf(200.0));
+
+        Room existingRoom = new Room();
+        existingRoom.setId(1L);
+        existingRoom.setName("Old Room");
+        existingRoom.setDescription("Old description");
+        existingRoom.setPrice(BigDecimal.valueOf(100.0));
+        existingRoom.setSleepingPlaces(2);
+        existingRoom.setCreatedAt(LocalDateTime.of(2025, 2, 12, 20, 5));
+        existingRoom.setUpdatedAt(LocalDateTime.of(2025, 2, 12, 20, 5));
+
         Room updatedRoom = new Room();
+        updatedRoom.setId(1L);
+        updatedRoom.setName("Updated Room");
+        updatedRoom.setDescription("Updated description");
+        updatedRoom.setPrice(BigDecimal.valueOf(200.0));
+        updatedRoom.setSleepingPlaces(3);
+        updatedRoom.setCreatedAt(existingRoom.getCreatedAt());
+        updatedRoom.setUpdatedAt(LocalDateTime.now().truncatedTo(ChronoUnit.MINUTES));
+
+        when(roomRepository.findById(1L)).thenReturn(Optional.of(existingRoom));
+        when(roomRepository.save(any(Room.class))).thenReturn(updatedRoom);
+        when(roomMapper.roomToRoomResponseDTO(any(Room.class))).thenReturn(
+                new RoomResponseDTO(1L, "Updated Room", 3, "Updated description",
+                        BigDecimal.valueOf(200.0), existingRoom.getCreatedAt(), updatedRoom.getUpdatedAt()));
+
+        RoomResponseDTO result = roomService.updateRoom(1L, updatedRoomDTO);
+
+        assertNotNull(result);
+        assertEquals("Updated Room", result.getName());
+        assertEquals(3, result.getSleepingPlaces());
+        assertEquals(BigDecimal.valueOf(200.0), result.getPrice());
+        assertEquals(existingRoom.getCreatedAt(), result.getCreatedAt());
+        assertNotNull(result.getUpdatedAt());
+
+        verify(roomRepository, times(1)).save(any(Room.class));
+    }
+
+
+    @Test
+    void testUpdateRoom_NotFound() {
+        RoomRequestDTO updatedRoomDTO = new RoomRequestDTO("Updated Room", 1, "Updated description", BigDecimal.valueOf(200.0));
         when(roomRepository.findById(1L)).thenReturn(Optional.empty());
 
-        assertThrows(RoomNotFoundException.class, () -> roomService.updateRoom(1L, updatedRoom));
+        assertThrows(RoomNotFoundException.class, () -> roomService.updateRoom(1L, updatedRoomDTO));
     }
 
     @Test
@@ -131,7 +178,6 @@ class RoomServiceTest {
         doNothing().when(roomRepository).deleteById(1L);
 
         assertDoesNotThrow(() -> roomService.deleteRoom(1L));
-
         verify(roomRepository, times(1)).deleteById(1L);
     }
 
